[gd_scene load_steps=14 format=2]

[ext_resource path="res://uipack_fixed (1)/PNG/grey_button00.png" type="Texture" id=1]
[ext_resource path="res://uipack_fixed (1)/Bonus/click1.ogg" type="AudioStream" id=2]
[ext_resource path="res://uipack_fixed (1)/PNG/grey_button01.png" type="Texture" id=3]
[ext_resource path="res://spaceshooter/Bonus/kenvector_future_thin.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://uipack_fixed (1)/Font/kenvector_future.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://GameOver.gd" type="Script" id=6]
[ext_resource path="res://uipack_fixed (1)/PNG/grey_button05.png" type="Texture" id=7]
[ext_resource path="res://uipack_fixed (1)/PNG/grey_button06.png" type="Texture" id=8]
[ext_resource path="res://uipack_fixed (1)/PNG/grey_button02.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=5]
size = 48
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=8]
size = 99
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 4 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )

[node name="PanelContainer" type="PanelContainer" parent="."]
self_modulate = Color( 1, 1, 1, 0.352941 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1010.0
margin_bottom = 586.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 1010.0
margin_bottom = 192.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 5 )
text = "GAME OVER"
align = 1
valign = 1

[node name="Score" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 196.0
margin_right = 1010.0
margin_bottom = 389.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 8 )
text = "94"
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 393.0
margin_right = 1010.0
margin_bottom = 586.0
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
margin_right = 1010.0
margin_bottom = 193.0
size_flags_vertical = 3
custom_constants/separation = 60
alignment = 1

[node name="TextureButton" type="TextureButton" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 287.0
margin_right = 475.0
margin_bottom = 193.0
rect_min_size = Vector2( 188, 48 )
size_flags_horizontal = 4
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 7 )
texture_focused = ExtResource( 8 )
expand = true
stretch_mode = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/TextureButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "TRY AGAIN"
align = 1
valign = 1

[node name="Sound" type="AudioStreamPlayer" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/TextureButton"]
unique_name_in_owner = true
stream = ExtResource( 2 )

[node name="TextureButton2" type="TextureButton" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 535.0
margin_right = 723.0
margin_bottom = 193.0
rect_min_size = Vector2( 188, 48 )
size_flags_horizontal = 4
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 1 )
expand = true
stretch_mode = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/TextureButton2"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 150, 28 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "BACK"
align = 1
valign = 1

[node name="Sound2" type="AudioStreamPlayer" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/TextureButton2"]
unique_name_in_owner = true
stream = ExtResource( 2 )

[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/TextureButton2" to="." method="_on_TextureButton2_pressed"]
